SERVER-78176 Tenant oplog applier handles back-to-back migration involving no-op session writes.